k8s/dev/neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.prod.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: neo4j
  name: neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: neo4j
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.prod.yml convert
        kompose.version: 1.21.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: neo4j
    spec:
      containers:
        - env:
            - name: NEO4J_AUTH
              value: none
          image: neo4j
          name: neo4j
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: neo4j
      hostname: neo4j
      restartPolicy: Always
      volumes:
        - name: neo4j
          persistentVolumeClaim:
            claimName: neo4j
status: {}
