k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.prod.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: NodePort
  ports:
    - name: "https-front"
      port: 443
      targetPort: 443
    - name: "http-front"
      port: 80
      targetPort: 80
    - name: "backend"
      port: 5000
      targetPort: 5000
    - name: "authserver"
      port: 3000
      targetPort: 3000
  externalIPs:
    - 192.168.39.108 #this should match minikube IP
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
