k8s/dev/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.prod.yml convert
    kompose.version: 1.21.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: neo4j
  name: neo4j
spec:
  ports:
    - port: 6379
  selector:
    io.kompose.service: neo4j
